<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<package format="3">
  <name>roslaunch2</name>
  <version>0.0.1</version>
  <description>
    This package provides the roslaunch2 tool and its Python API which allows dynamic ROS launch
    files written in Python.
  </description>

  <maintainer email="adrian.boeckenkamp@tu-dortmund.de">Adrian Böckenkamp (TU Dortmund University)</maintainer>
  <author email="adrian.boeckenkamp@tu-dortmund.de">Adrian Böckenkamp (TU Dortmund University)</author>
  <url type="website">https://github.com/CodeFinder2/roslaunch2</url>
  <url type="repository">https://github.com/CodeFinder2/roslaunch2</url>
  <url type="bugtracker">https://github.com/CodeFinder2/roslaunch2/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</exec_depend>
  <exec_depend>python-enum34-pip</exec_depend>
  <exec_depend version_gte="4.62">pyro4</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosbash</exec_depend>
  <exec_depend>python-requests</exec_depend>
</package>
